--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,46 +1,46 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Estilos para el body */
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f7f9; /* Color de fondo suave */
-  margin: 0; /* Elimina el margen por defecto */
-  padding: 20px;
-  overflow-x: hidden; /* Evita el desplazamiento horizontal */
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  overflow-x: hidden;
 }
 
-main {
-  width: 1152px;
-  margin: 0 auto;
-  padding: 20px;
+img {
   max-width: 100%;
+  height: auto;
 }
-article {
-  flex: 3;
-  padding: 20px;
-  background: white;
-  margin-right: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-aside {
-  flex: 1;
-  background: #e2e2e2;
-  padding: 20px;
 
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+a {
+  text-decoration: none;
 }
 
 /* Estilos del header */
 
 #header {
-  width: 1152px;
-  max-width: 100%;
-  margin: 0 auto;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
 #header .header-interior {
+  margin: 0 auto;
+  width: 1200px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  height: 100px;
+  padding: 10px;
+  height: 90px;
   gap: 10px;
 }
 #header .header-interior img {
@@ -48,18 +48,25 @@ aside {
   max-width: 100%;
 }
 #header .header-interior .titulo {
-  font-size: 28px;
+  font-size: 24px;
   text-transform: uppercase;
-  width: 500px;
+  width: 300px;
   line-height: 30px;
   margin: 0 20px;
 }
 
+#header .header-interior a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
 #header .header-interior button {
-  background-color: A8D8E8;
+  background-color: #a8d8e8;
   padding: 5px 10px;
   width: 300px;
   font-size: 16px;
+  cursor: pointer;
 }
 
 #header .navegacion {
@@ -92,16 +99,56 @@ aside {
   font-size: 24px;
 }
 
-#main .bienvenida {
+/* --------- HOME  ---------*/
+#main {
+  max-width: 1200px;
+  margin: 20px auto;
+}
+#main .container {
+  width: 100%;
+  gap: 20px;
   display: flex;
+  flex-direction: column;
 }
 
-/* HOME */
-#main {
+#main .container .bienvenida {
+  display: grid;
+  grid-template-columns: 1fr 0.3fr;
+  gap: 20px;
 }
-#main .bienvenida {
+
+#main .container article {
+  margin: 0;
+  padding: 10px 0px;
+}
+
+/* SERVICIOS */
+#servicios {
+}
+#servicios .servicios {
   display: flex;
-  flex-wrap: wrap;
+  gap: 20px;
+  margin: 50px 0;
+}
+
+/* --------- EQUIPO MÉDICO ---------- */
+#equipo-medico {
+  max-width: 1200px;
+  margin: 20px auto;
+}
+#equipo-medico .container {
+  width: 100%;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+#equipo-medico .card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px 0;
 }
 
 /* ---------- FOOTER ------- */
@@ -111,20 +158,59 @@ aside {
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 10px;
 }
 
 #footer .footer-content {
-  width: 1152px;
+  width: 1200px;
   max-width: 100%;
+  margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  gap: 20px;
+}
+
+#footer .footer-bottom {
+  text-align: center;
+  margin-top: 20px;
+  width: 100%;
+}
+
+#footer .footer-content .enlaces {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#footer .footer-content .enlaces li {
+  list-style: none;
+}
+
+#footer .footer-content .contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#footer .footer-content .social-media {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 /* -------- CONTACTO --------  */
 #contacto {
+  width: 1200px;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
-#contacto .title {
+#contacto .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
 }
 
 #contacto .infor {
@@ -133,6 +219,7 @@ aside {
   justify-content: center;
   align-items: center;
   width: 100%;
+  padding: 10px;
 }
 
 #contacto form {
@@ -160,6 +247,11 @@ textarea {
   box-sizing: border-box;
 }
 
+#contacto iframe {
+  width: 600px;
+  max-width: 100%;
+}
+
 /* Estilo de botón */
 #contacto button {
   padding: 12px;
@@ -174,15 +266,86 @@ textarea {
 }
 
 @media (max-width: 768px) {
+  #header {
+    width: 100%;
+    padding: 10px;
+  }
   #header .navegacion {
     display: none;
   }
 
-  #main .bienvenida {
+  #header .header-interior {
+    padding: 0;
+    height: 90px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  #header .header-interior img {
+    width: 50px;
+    max-width: 100%;
+  }
+
+  #header .header-interior .titulo {
+    width: 200px;
+    font-size: 16px;
+    text-wrap: balance;
+  }
+
+  #main .container {
+    padding: 10px;
+  }
+
+  #equipo-medico .container {
+    padding: 10px;
+  }
+
+  #main .container .bienvenida {
+    grid-template-columns: 1fr;
+    padding: 0;
+    margin: 20px 0;
+  }
+
+  #servicios .servicios {
+    flex-wrap: wrap;
+  }
+
+  #servicios .servicios img {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  #equipo-medico .card {
+    display: flex;
     flex-direction: column;
   }
 
   #contacto .infor {
     flex-direction: column;
+  }
+
+  #footer .footer-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #footer .enlaces,
+  .contact-info,
+  .social-media {
+    text-align: center;
+  }
+
+  #footer .footer-content .footer-bottom p {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 480px) {
+  #footer {
+    padding: 10px 0;
+  }
+
+  #footer .footer-content {
+    padding: 0 10px;
   }
 }
