--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,16 @@
 @import 'abstracts/mixins';
-@import 'base/variables'; 
+@import 'base/variables';
 
-// LAYOUT
-@import 'abstracts/mixins';
-@import 'layout/header'; 
+// COMPONENTS
+@import 'components/buttonCita';
+
+// VARIABLES
+@import 'components/navegacion';
+
+// LAYOUTS
+@import 'layout/header';
+@import 'layout/container';
+
+// PAGES
+@import 'pages/home';
+
