--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
   transition: transform 0.3s ease;
 }
 .navegacion a:hover {
-  color: #0056b3;
+  color: rgb(0, 86.1, 178.5);
 }
 .navegacion a:hover::after {
   transform: scaleX(1);
@@ -323,8 +323,7 @@ h2 {
 .equipo .equipo__card img {
   width: 300px;
   max-width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 @media (max-width: 767px) {
   .equipo .equipo__card img {
@@ -419,9 +418,11 @@ h2 {
   width: 100%;
 }
 .container .infor form .btn-submit:hover {
-  background-color: #0062cc;
+  background-color: rgb(0, 98.4, 204);
 }
 .container .infor form .btn-submit:disabled {
   background-color: #ccc;
   cursor: not-allowed;
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
