--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,57 +1,66 @@
 @import "../abstracts/mixins";
-
 @import "../layout/container";
 
-.container {
-  margin: 200px auto 0;
-  width: 1200px;
-  max-width: 100%;
+.container__bienvenida {
+  display: flex;
+  gap: 20px;
 
   @include tablet() {
-    padding: 20px;
-    margin: 120px auto 0;
+    aside {
+      display: none;
+    }
   }
+}
 
-  h2 {
-    font-size: 32px;
-    text-transform: uppercase;
-    border-bottom: 2px solid #007bff;
-  }
+h2 {
+  font-size: 32px;
+  text-transform: uppercase;
+  border-bottom: 2px solid #007bff;
+}
 
-  .servicios {
-    max-width: 100%;
-    display: flex;
+.servicios {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+
+  @include tablet() {
     flex-direction: column;
-    gap: 20px;
+  }
 
-    .servicios__infor {
-      display: flex;
-      gap: 15px;
+  @include mobile() {
+    width: 100%;
+    flex-direction: column;
+  }
 
-      img {
-        width: 100%;
-        max-width: 100%;
-        height: auto;
+  .servicios__infor {
+    width: 100%;
+    display: flex;
+    gap: 15px;
+    flex-direction: row;
 
-        
+    @include mobile() {
+      flex-direction: column;
+    }
+
+    img {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+
       @include tablet() {
         width: 300px;
       }
-      }
+    }
+
+    .servicios__detalles {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin: 10px 0;
 
       @include tablet() {
-       gap: 10px;
-      }
-
-      .servicios__detalles {
-        display: flex;
         flex-direction: column;
-        gap: 20px;
-        margin: 10px 0;
-
-        @include tablet() {
-          flex-direction: column;
-        }
       }
     }
   }
