--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,7 +1,15 @@
 @import '../abstracts/mixins';
 
 .container {
-  margin: 180px auto 0;
+  margin: 150px auto 0;
   width: 1200px;
   max-width: 100%;
+
+  @include tablet() {
+    margin: 100px 0;
+  }
+
+  @include mobile() {
+    margin: 80px 0;
+  }
 }
