--- a/sass/pages/_equipo-medico.scss
+++ b/sass/pages/_equipo-medico.scss
@@ -1,10 +1,6 @@
 @import '../abstracts/mixins';
 
 .equipo {
-  max-width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
 
   @include mobile() {
     margin: 100px 0 0;
@@ -13,7 +9,7 @@
   .equipo__card {
     display: flex;
     gap: 20px;
-
+    
     @include mobile() {
       flex-direction: column;
     }
@@ -32,6 +28,9 @@
     .equipo__infor {
       max-width: 100%;
       margin: 0;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
 
       @include mobile() {
         margin: 0px;
