--- a/sass/pages/_equipo-medico.scss
+++ b/sass/pages/_equipo-medico.scss
@@ -1,15 +1,21 @@
 @import '../abstracts/mixins';
 
-.equipo {
+.equipo-medico {
+  padding: 150px 0 0;
+}
 
-  @include mobile() {
-    margin: 100px 0 0;
-  }
+.equipo {
 
   .equipo__card {
     display: flex;
     gap: 20px;
+    padding: 20px 0;
+
     
+    @include tablet() {
+      flex-direction: column;
+    }
+
     @include mobile() {
       flex-direction: column;
     }
