--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -104,17 +104,13 @@
     margin: 50px 0;
   }
 
+  @include tablet() {
+    
+  }
+
   @include mobile() {
     gap: 10px;
   }
 }
 
-section {
-  @include desktop() {
-    padding: 50px 0 0;
-  }
 
-  @include mobile() {
-    padding: 20px 0;
-  }
-}
