--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,7 +3,7 @@
 
 .bienvenida {
   display: flex;
-  gap: 20px;
+  margin: 120px 0 20px;
 
   .bienvenida__encabezado {
     .bienvenida__titulo {
@@ -18,6 +18,19 @@
   }
 
   .bienvenida__aside {
+    ul {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      gap: 5px;
+      padding: 5px;
+
+      li {
+        list-style: none;
+        line-height: 20px;
+      }
+    }
+
     @include tablet() {
       display: none;
     }
@@ -47,45 +60,48 @@
 }
 
 .servicios {
-  gap: 50px;
+  .row {
+    gap: 50px;
 
-  .servicios__infor {
-    width: 100%;
-    display: flex;
-    gap: 15px;
-    flex-direction: row;
-
-    &.servicios__infor:nth-child(2) {
-      flex-direction: row-reverse;
-    }
-
-    @include mobile() {
-      flex-direction: column;
+    .servicios__infor {
+      width: 100%;
+      display: flex;
+      gap: 15px;
+      flex-direction: row;
+      margin: 50px 0 20px;
 
       &.servicios__infor:nth-child(2) {
-        flex-wrap: wrap;
+        flex-direction: row-reverse;
       }
-    }
-
-    img {
-      width: 100%;
-      max-width: 100%;
-      height: auto;
-
-      @include tablet() {
-        width: 300px;
-      }
-    }
-
-    .servicios__detalles {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      margin: 10px 0;
-      padding: 50px;
 
       @include mobile() {
-        padding: 10px;
+        flex-direction: column;
+
+        &.servicios__infor:nth-child(2) {
+          flex-wrap: wrap;
+        }
+      }
+
+      img {
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+
+        @include tablet() {
+          width: 300px;
+        }
+      }
+
+      .servicios__detalles {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin: 10px 0;
+        padding: 50px;
+
+        @include mobile() {
+          padding: 10px;
+        }
       }
     }
   }
@@ -105,12 +121,9 @@
   }
 
   @include tablet() {
-    
   }
 
   @include mobile() {
     gap: 10px;
   }
 }
-
-
